[package]
name = "nodejs_path"
license = "MIT"
version = "0.0.4"
edition = "2021"
description = "Port path module (and tests) of nodejs to rust using the same algorithms."
repository = "https://github.com/iheyunfei/rusty_nodejs_path"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "posix"
harness = false