[package]
name = "nodejs_path"
license = "MIT"
version = "0.0.8"
edition = "2021"
keywords = ["path", "nodejs"]
description = "Port path module (and tests) of nodejs to rust using the same algorithms."
repository = "https://github.com/iheyunfei/rusty_nodejs_path"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.9.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "posix"
harness = false